--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,17 +1,26 @@
 .link{
     text-decoration: none;
     border-radius: 4px;
-    color: slategray;
+    color: rgb(44, 46, 48);
     font-weight: 500;
     padding: 8px 16px;
 
 }
+.link:hover{
+    color: rgb(227, 32, 32);
+}
 .linkActive{
     composes: link;
-    color: ivory;
-    background-color: dimgray;
+    color: rgb(227, 32, 32);
+  
 }
 .headerContainer{
     background-color: ivory;
     height: 50px;
+}
+.header {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
